[gd_scene load_steps=18 format=2]

[ext_resource path="res://Common/Enemies/Basic/BasicEnemySprite.png" type="Texture" id=1]
[ext_resource path="res://Common/HitHurtBox/Hurtbox/HurtBox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Common/Enemies/Basic/BasicEnemy.gd" type="Script" id=3]
[ext_resource path="res://Common/HitHurtBox/Hitbox/HitBox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Common/Enemies/Experience/ExpOrb.tscn" type="PackedScene" id=5]
[ext_resource path="res://Common/ShadowSprite.png" type="Texture" id=6]
[ext_resource path="res://Common/Shaders/WhiteHit.shader" type="Shader" id=7]
[ext_resource path="res://Common/Enemies/Basic/dieThrow1.ogg" type="AudioStream" id=8]
[ext_resource path="res://Common/Enemies/DeathParticles/DeathParticles.tscn" type="PackedScene" id=9]

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Walk"
length = 0.7
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=6]
resource_name = "Hurt"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="ShaderMaterial" id=7]
resource_local_to_scene = true
shader = ExtResource( 7 )
shader_param/active = false
shader_param/is_hurt = true

[sub_resource type="CapsuleShape2D" id=1]
radius = 3.49999
height = 4.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 7.0
height = 5.0

[sub_resource type="CapsuleShape2D" id=3]
radius = 7.0
height = 5.0

[node name="BasicEnemy" type="KinematicBody2D"]
scale = Vector2( 2, 2 )
collision_layer = 131072
collision_mask = 131584
script = ExtResource( 3 )
death_particles = ExtResource( 9 )
exp_orb = ExtResource( 5 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
volume_db = -10.0
bus = "Sound"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Walk"
reset_on_save = false
anims/RESET = SubResource( 4 )
anims/Walk = SubResource( 5 )

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
reset_on_save = false
anims/Hurt = SubResource( 6 )
anims/RESET = SubResource( 8 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( -0.5, 9.5 )
texture = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 7 )
texture = ExtResource( 1 )
hframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 6.5 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="HurtBox" parent="." instance=ExtResource( 2 )]
collision_layer = 131072
col_shape = NodePath("CollisionShape2D")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2( 0, 0.5 )
shape = SubResource( 2 )

[node name="HitBox" parent="." instance=ExtResource( 4 )]
collision_mask = 512
col_shape = NodePath("CollisionShape2D")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2( 0, 0.5 )
shape = SubResource( 3 )

[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]
